--- a/src/components/portfolio/style.scss
+++ b/src/components/portfolio/style.scss
@@ -15,6 +15,10 @@
 
   .inner-img {
     height: 70vh;
+    
+    [data-overlay]:before {
+      opacity: 0 !important;
+    }
   }
 
   .port-classic & .inner-img {
