cursor and slider styling

--- a/src/assets/sass/forms/_buttons.scss
+++ b/src/assets/sass/forms/_buttons.scss
@@ -11,7 +11,7 @@ input[type="submit"] {
   line-height: 14px;
   letter-spacing: 3px;
   text-transform: uppercase;
-  cursor: pointer;
+  cursor: none;
   padding: 20px 41px;
   transition: background 0.3s, color 0.3s;
   overflow: hidden;
