--- a/src/assets/sass/pagination/_swiper.scss
+++ b/src/assets/sass/pagination/_swiper.scss
@@ -16,7 +16,7 @@
   height: 2px;
   border-radius: 0;
   margin-right: 5px;
-  cursor: pointer;
+  cursor: none;
   background: $heading-color;
   transition: transform 0.3s ease-in-out;
   &.swiper-pagination-bullet-active{
