--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -101,6 +101,11 @@ body {
   text-rendering: optimizeLegibility;
   transition: 100ms;
   transition-property: background-color, color;
+  cursor: none;
+}
+
+a:-webkit-any-link {
+  cursor: none;
 }
 
 #main_layout {
@@ -195,7 +200,7 @@ body {
 }
 
 [data-fancybox] {
-  cursor: pointer;
+  cursor: none;
 }
 
 .dsn-swiper-parallax-transform {
