--- a/src/components/brand-client/style.scss
+++ b/src/components/brand-client/style.scss
@@ -46,7 +46,7 @@
                 font-size: 10px;
                 top: 50%;
                 transform: translateY(-50%);
-                cursor: pointer;
+                cursor: none;
             }
 
             .entry {
