--- a/src/components/nav/menu/_nav_toogle.scss
+++ b/src/components/nav/menu/_nav_toogle.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   z-index: 1;
-  cursor: pointer;
+  cursor: none;
 
   .toggle-icon {
     --width-icon: 25px;
