--- a/src/components/portfolio/style.scss
+++ b/src/components/portfolio/style.scss
@@ -106,7 +106,7 @@
         font-size: 14px;
         font-weight: 500;
         display: inline-block;
-        cursor: pointer;
+        cursor: none;
         transition: all 0.15s ease-in-out;
         transition-duration: 0.6s;
         letter-spacing: 2px;
